--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "node-fetch": "^2.6.1",
     "xmlhttprequest": "^1.8.0"
   },
